Added bio and css final

--- a/src/App.css
+++ b/src/App.css
@@ -2423,7 +2423,7 @@ input, select, textarea {
 
 	ul {
 		list-style: disc;
-		margin: 0 0 2em 0;
+		margin: 0em 0 0em 0;
 		padding-left: 1em;
 	}
 
