updated the margin for paragraph under contacts to make it not overlap with the arrow navigators and made image to fill as contain rather than stretch

--- a/src/App.css
+++ b/src/App.css
@@ -3778,3 +3778,18 @@ input, select, textarea {
 			}
 
 		}
+
+/* paragraph in contacts */
+
+#style .Page-content p {
+	width: 80%;
+	margin: auto;
+	margin-bottom: 50px;
+}
+
+#style .Page-content img{
+	object-fit: contain;
+	max-height: 200px;
+	max-width: 200px;
+	
+}
